--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "keywords": [
     "node.js",
     "iot",
-    "raspberryPi"
+    "raspberryPi",
+    "student"
   ],
   "author": "Gergana Germanova",
   "license": "ISC"
