testing once again ssh

--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "keywords": [
     "node.js",
     "iot",
-    "raspberryPi",
-    "student"
+    "raspberryPi"
   ],
   "author": "Gergana Germanova",
   "license": "ISC"
